--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,10 +99,10 @@ jobs:
  #         github_token: ${{ secrets.GIST_TOKEN }}
  #         branch: ${{ steps.coverage.outputs.branch }}
       
-      - name: Upload badge as artifact
+      - name: Custom Upload badge as artifact
         uses: gaelgirodon/ci-badges-action@v1
         with:
-          gist-id: ${{ env.GIST_ID }}
+          gist-id: ${{ var.GIST_ID }}
           token: ${{ secrets.GIST_SECRET }}
 
 
