--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ run-name: pyKZK is testing out GitHub Actions
 
 on: [push]
 
+env:
+  GIST_ID: 05580cecfa0faf2ba85b2753e7bc4d7e
+
 jobs:
   doc:
     runs-on: ubuntu-latest
